# VCEI-ver2

./: .gitattributes  CODE_GUIDE.md  README.md
.bevel/do_not_share/: bevel.db
CarHackData/: DoS_dataset.csv  Fuzzy_dataset.csv  RPM_dataset.csv  gear_dataset.csv  normal_run_data.txt
IntrusionDetectNet-CNN-Transformer-main/: README.md  classification_errors.csv  transformer_ids_model.pth
IntrusionDetectNet-CNN-Transformer-main/PycharmProjects/: Step0_IDS_FSL.ipynb  data_preprocess.py  evaluate.py  model.py  train.py
REAL-IDS/: .gitignore  README.md  USAGE.md  start_daemon_with_ml_bridge.bat
REAL-IDS/cpp/: CMakeLists.txt  build_msvc.bat  configure_vs2022.bat
REAL-IDS/cpp/daemon/: broadcast_hub.hpp  main.cpp
REAL-IDS/cpp/include/real_ids/: can_ids.hpp  central_processor.hpp  engine.hpp  eth_buffer.hpp  ingress.hpp  time_source.hpp  types.hpp
REAL-IDS/cpp/src/: can_ids.cpp  central_processor.cpp  engine.cpp  eth_buffer.cpp
REAL-IDS/docs/: CODE_STRUCTURE.md  README.md
REAL-IDS/web-dashboard/: .env.example  .gitignore  README.md  index.html  observatory-standalone.html  package-lock.json  package.json  run-dev.ps1
autoids_-can-&-ethernet-intrusion-detection-system/: README.md  metadata.json  package-lock.json  package.json  server.ts
autoids_-can-&-ethernet-intrusion-detection-system/src/: App.tsx  index.css
backend-main/backend-main/: db.sqlite3
paper-figures/: system_workflow_dataflow.md
paper-figures/can-cnn-64x9/: README.md  fig01_method_overview_redraw.fdb_latexmk  fig01_method_overview_redraw.fls  fig01_method_overview_redraw.tex  (+23 more)
(+109 files in other folders)
